...
    override var preferredScreenEdgesDeferringSystemGestures: UIRectEdge { .all }
    override var supportedInterfaceOrientations: UIInterfaceOrientationMask { .allButUpsideDown }

    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .clear
        view.accessibilityIdentifier = "story-image-viewer"
        view.accessibilityViewIsModal = true
        overrideUserInterfaceStyle = .dark
        backdrop.backgroundColor = .black
        backdrop.alpha = 0
        view.addSubview(backdrop)
        scroll.delegate = self
...
