...
    [self.searchField addTarget:self action:@selector(searchFieldDidChange:) forControlEvents:UIControlEventEditingChanged];

    [searchContainerView addSubview:self.searchField];
    self.feedSearchContainerView = searchContainerView;
    self.horizontalFeedTopMargin = self.view.directionalLayoutMargins.top;
    self.feedTitlesTable.tableHeaderView = searchContainerView;
    self.feedTitlesTable.accessibilityIdentifier = @"feeds-list";
    
    userLabelFont = [UIFont fontWithName:@"WhitneySSm-Medium" size:15.0];
    
    imageCache = [[NSCache alloc] init];
    [imageCache setDelegate:self];
    
...
